@@ -1,3 +1,8 @@
+2006-12-13  Chris Taylor  <chris@icculus.org>
+
+	* texmap/tmapflat.c: divide negative window x-coordinates properly,
+	fixing random crashes
+
 2006-12-03  Chris Taylor  <chris@icculus.org>
 
 	* texmap/tmapppro.S: fix assemble error for gas (fix bug #2312)
